# lcloud

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DECISIONS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  goal.md  lcloud.service  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_users_api_keys.py  0003_compression.py  0004_payments.py  0005_sharing_versioning.py  0006_json_db.py  0007_json_db_rules.py  0008_json_db_write_validators.py  0009_json_db_public_keys.py  0010_storage_public_keys.py  0011_json_db_telegram_backup.py  0012_app_auth.py  0013_json_databases.py  0014_json_database_keys.py
docs/: API.md  ARCHITECTURE.md  CRYPTO.md  DOCKER.md  LCLOUD_DB.md  LCLOUD_DB_AI.md  OPERATOR.md  QUICKSTART.md  SDK_PUBLISHING.md
lcloud/: __init__.py  cache.py  config.py  login.py  main.py  metrics.py
lcloud/api/: __init__.py  api_keys.py  app_auth.py  auth.py  auth_v2.py  cache_admin.py  (+17 more)
scripts/: backup.sh  install-systemd.sh  lcloud-backup.service  lcloud-backup.timer  setup-tls.sh
sdk/: README.md  package.json
tests/: test_admin_bootstrap_seed.py  test_api_keys.py  test_auth_api.py  test_auth_v2.py  test_cache.py  test_chat_commands.py  test_clouds_api.py  test_compression.py  test_config.py  test_crypto.py  test_db.py  test_files_api.py  test_files_userbot.py  test_health.py  test_ingest_handler.py  test_json_db_api.py  test_jwt.py  test_lc1.py  test_lc2.py  test_magic_link.py  test_marker.py  test_payments.py  test_pin_recovery.py  test_rate_limit.py  test_rate_limiter_async.py  test_saved_messages_commands.py  test_scan.py  test_shares_versions.py  test_tags_search_api.py  test_userbot.py  test_v2_clouds_files.py  test_video_compression.py  test_worker_pool.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+84 files in other folders)
