[project]
name = "lcloud"
version = "0.1.0"
description = "LCloud — Telegram userbot acting as a personal cloud file manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LCloud" }]
dependencies = [
    "telethon==1.36.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "pynacl==1.5.0",
    "pyjwt==2.10.0",
    "python-multipart==0.0.17",
    "anyio==4.6.2.post1",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "Pillow==10.4.0",
    "mnemonic==0.21",
    "argon2-cffi==23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[project.scripts]
lcloud = "lcloud.main:run"
lcloud-login = "lcloud.login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcloud"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", "web", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
# E501: long lines fine inside docstrings/migrations
# B008: FastAPI's `Depends(...)` in default args is the canonical pattern
# RUF001/002/003: Cyrillic-vs-Latin lookalike chars — false-positive in
#   Russian-language admin messages and docstrings.
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["alembic/versions", "web", "data", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --strict-markers"
